--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Portafolio</title>
-	<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="iconos/style.css">
+	<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
 	<link rel="stylesheet" href="css/main.css">
 	
 </head>
@@ -14,7 +14,6 @@
     <header class="img navbar">
         <nav class="navbar navbar-default encabezado navbar-fixed-top">
 		    <div class="container-fluid">
-			    <!-- Brand and toggle get grouped for better mobile display -->
 			    <div class="navbar-header">
 			        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
 				        <span class="sr-only">Toggle navigation</span>
@@ -22,25 +21,24 @@
 				        <span class="icon-bar"></span>
 				        <span class="icon-bar"></span>
 			        </button>
-			        <a class="navbar-brand" href="#">PORTAFOLIO</a>
+			        <a href="#" class="navbar-brand"><span class="texto_encabezado">PORTAFOLIO</span></a>
 			    </div>
-			    <!-- Collect the nav links, forms, and other content for toggling -->
 			    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1"> 
 			        <ul class="nav navbar-nav navbar-right">
-				        <li><a href="#sobre">SOBRE MÍ</a></li>
-				        <li><a href="#servicios">SERVICIOS</a></li>
-				        <li><a href="#trabajos">MIS TRABAJOS</a></li>
-				        <li><a href="#contactame">CONTÁCTAME</a></li>
+				        <li><a href="#sobre"><span class="texto_encabezado">SOBRE MÍ</span></a></li>
+				        <li><a href="#servicios"><span class="texto_encabezado">SERVICIOS</span></a></li>
+				        <li><a href="#trabajos"><span class="texto_encabezado">MIS TRABAJOS</span></a></li>
+				        <li><a href="#contactame"><span class="texto_encabezado">CONTÁCTAME</span></a></li>
 			        </ul>
-			    </div><!-- /.navbar-collapse -->
-		    </div><!-- /.container-fluid -->
+			    </div>
+		    </div>
 		</nav>
 		<div class="container">
 		    <div class="row">
 				<div class="caja">
 			        <h3 class="mi_nombre">HOLA,MI NOMBRE ES ALEXANDRA SOY CODER DE LABORATORIA<span class="label label-default"></span></h3>
 			        <p class="descripción">Estás interesado en desarrollar un sitio web  necesitas una frontend develeper, yo te puedo ayudar con los diferentes servicios que brindo.</p>
-			        <a class="btn btn-primary btn-lg" href="#" role="button">conoce más</a></p>
+			        <a id="button" class="btn btn-primary btn-lg" href="#" role="button">conoce más</a></p>
 		        </div>
 	        </div>
         </div>
@@ -109,7 +107,7 @@
         <section>
         	<div class="banner_2 jumbotron">
 				<h3>Si quieres saber más de mi proyecto revisa mi github</h3>
-				<a class="btn btn-primary btn-lg" href="#" role="button">Ver mi github</a>
+				<a id="button" class="btn btn-primary btn-lg" href="#" role="button">Ver mi github</a>
 			</div>
     	</section>
     	<footer id="contactame">
